Fix stats overflow issue (#538)

--- a/src/css/sass/components/projects.scss
+++ b/src/css/sass/components/projects.scss
@@ -175,7 +175,6 @@
 
     .report {
       margin-bottom: 3%;
-      overflow: auto;
       border-bottom: 3px solid $thinpink;
     }
 
